Fix scrollbar on setup-tree

--- a/src/app/modules/ui-components/components/rf-button/rf-button.component.scss
+++ b/src/app/modules/ui-components/components/rf-button/rf-button.component.scss
@@ -19,7 +19,7 @@
   color: #ffff;
 
   border: 0;
-  padding: 0.2rem 1.5rem 0.2rem;
+  padding: 0.2rem 1.5rem 0.3rem;
   margin-bottom: 8px;
   margin-left: 0.45rem;
   text-transform: none;
